atualizando os texto tudo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <article id="about-me">
                 <div id="who-am-i">
                     <h2>Quem sou eu?</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, perspiciatis explicabo, aspernatur quas placeat hic vero, doloremque odit voluptas inventore provident ab ex. Ad natus, quasi animi laudantium at nulla!</p>
+                    <p>Curso Análise e Desenvolvimento de Sistemas. Sou apaixonado por programação e gosto de aplicar meus conhecimentos em projetos que envolvem tecnologia. Além disso, amo jogos e gosto de explorar a lógica por trás deles, tanto como jogador quanto desenvolvedor.</p>
                 </div>
                 <aside id="know-more">
                     <h3>Me conheça mais via:</h3>
@@ -48,7 +48,7 @@
                 </div>
                 <div id="tec-info">
                     <h2>Minhas técnologias</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius qui eligendi similique dolor architecto repellendus libero ex aut, cumque sed vel aperiam sint suscipit, asperiores aspernatur est obcaecati explicabo optio.</p>
+                    <p>Sou proficiente em diversas tecnologias, como Python, C, HTML5, CSS3 e JavaScript. Utilizo essas habilidades em projetos que variam desde jogos a sistemas diversos. Minha experiência inclui o desenvolvimento de jogos interativos no terminal, aplicativos web dinâmicos e soluções embarcadas com Arduino.</p>
                 </div>
             </article>
         </section>
@@ -61,27 +61,37 @@
                 </a>
                 <div>
                     <h2>Snake Game</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id labore expedita nam excepturi iure dolorem veniam recusandae, numquam dolore impedit, illo ea minima asperiores quo animi ducimus at odio eos.</p>
+                    <p>Este projeto, desenvolvido em C, implementa o clássico jogo da cobra (Snake) jogável diretamente no terminal. O jogo utiliza controles básicos para movimentar o jogador, comer frutas e crescer, enquanto o jogador evita colidir com a própria cauda.</p>
                 </div>
             </article>
             <article>
-                <a href="https://github.com/ThonyHHs/pokemon" target="_blank">
-                    <img class="png" src="images/pokemon.png" alt="snake">
-                    <img class="gif" src="images/pokemon.gif" alt="snake gif">
+                <a href="https://github.com/ThonyHHs/PyKemon" target="_blank">
+                    <img class="png" src="images/pokemon.png" alt="Pykemon">
+                    <img class="gif" src="images/pokemon.gif" alt="Pykemon gif">
                 </a>
                 <div>
-                    <h2>Pokemon</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id labore expedita nam excepturi iure dolorem veniam recusandae, numquam dolore impedit, illo ea minima asperiores quo animi ducimus at odio eos.</p>
+                    <h2>Pykemon</h2>
+                    <p>Este projeto, desenvolvido em python, é um jogo de aventura inspirado em Pokémon, jogado no terminal. Os jogadores exploram biomas, capturam pokémons e visualizam seus itens e pokédex. O código usa módulos e funções para organizar as mecânicas do jogo.</p>
                 </div>
             </article>
             <article>
-                <a href="https://github.com/ThonyHHs/display_de_informacoes" target="_blank">
-                    <img class="png" src="images/campoMinado.png" alt="snake">
-                    <img class="gif" src="images/campoMinado.gif" alt="snake gif">
+                <a href="https://github.com/ThonyHHs/raciocinio_computacional_PUC" target="_blank">
+                    <img class="png" src="images/cadastros.png" alt="cadastro">
+                    <img class="gif" src="images/cadastro.gif" alt="cadastro gif">
+                </a>
+                <div>
+                    <h2>Sistema Acadêmico</h2>
+                    <p>Este projeto em Python implementa um sistema de gerenciamento acadêmico que usa arquivos JSON para armazenar dados e permite realizar operações de CRUD (Criar, Ler, Atualizar e Excluir) para alunos, professores, disciplinas, turmas e matrículas.</p>
+                </div>
+            </article>
+            <article>
+                <a href="https://github.com/ThonyHHs/MineSweeper" target="_blank">
+                    <img class="png" src="images/campoMinado.png" alt="Miner">
+                    <img class="gif" src="images/campoMinado.gif" alt="Miner gif">
                 </a>
                 <div>
                     <h2>Miner</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id labore expedita nam excepturi iure dolorem veniam recusandae, numquam dolore impedit, illo ea minima asperiores quo animi ducimus at odio eos.</p>
+                    <p>Este projeto implementa o clássico jogo de Campo Minado, jogável diretamente no navegador. Desenvolvido em JavaScript, HTML e CSS, o jogo permite ao usuário selecionar a dificuldade, colocar bandeiras, revelar células e evitar bombas em um grid dinâmico.</p>
                 </div>
             </article>
             <div id="more">
