--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </div>
                 <aside id="know-more">
                     <h3>Me conheça mais via:</h3>
-                    <a href="#"><img src="images/linkedin.svg" alt="linkedin">linkedin</a>
-                    <a href="#"><img src="images/instagram.svg" alt="linkedin">instagram</a>
+                    <a href="https://www.linkedin.com/in/anthony-herbert-schmidt/"><img src="images/linkedin.svg" alt="linkedin">Linkedin</a>
+                    <a href="https://github.com/ThonyHHs"><img src="images/github-mark.svg" alt="linkedin">GitHub</a>
                 </aside>
             </article>
             <article id="tec">
@@ -96,7 +96,7 @@
             </article>
             <div id="more">
                 <h3>Veja mais em:</h3>
-                <a href="#"><img src="images/github.svg" alt="git">GitHub</a>
+                <a href="https://github.com/ThonyHHs"><img src="images/github.svg" alt="git">GitHub</a>
             </div>
         </section>
         <section id="contact">
